<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FISFLIX</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="register">REGISTER</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="loading">Loading…</string>
    <string name="success">Success</string>
    <string name="welcome">Welcome</string>
    <string name="error">Email or password incorrect</string>
    <string name="n_user">Username can\'t be empty</string>
    <string name="n_email">Email can\'t be empty</string>
    <string name="n_pass">Password can\'t be empty</string>
    <string name="e_delete">Delete account failed</string>
    <string name="e_update">Update account failed</string>
    <string name="e_email">Email already registered</string>
    <string name="e_pass">Password must be same</string>
    <string name="e_pass_6">Password must be at least 6 characters</string>
    <string name="i_email">Invalid email address</string>
    <string name="confirm_message">Are you sure want to delete this account?</string>
    <string name="pos_btn">Yes</string>
    <string name="neg_btn">No</string>
    <string name="ok">OK</string>
    <string name="title_tab1">Movies</string>
    <string name="title_tab2">TV Shows</string>
    <string name="release_date_label">Release Date</string>
    <string name="overview_label">Overview</string>
    <string name="details">Details</string>
    <string name="now_playing">Now Playing</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="on_tv">On TV</string>
    <string name="airing_today">Airing Today</string>
    <string name="about">About</string>
    <string name="action_logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="choose_language">Choose language</string>
    <string name="gusrifaris_yuda_alhafis">Gusrifaris Yuda Alhafis</string>
    <string name="nim">11850112172</string>
    <string name="name">Name</string>
    <string name="room">APMOB 4E</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="todo">TODO</string>
</resources>